# FlexOLink-spi

./: CMakeLists.txt  README.md  prj.conf
ad4696/zephyr/: CMakeLists.txt  Kconfig  ad4696.c  ad4696.h
ble/zephyr/: CMakeLists.txt  Kconfig  ble_service.c  ble_service.h
boards/: nrf52dk_nrf52832.overlay
boards/arm/flexolink_ring/: Kconfig.board  Kconfig.defconfig  flexolink_ring.dts  flexolink_ring.yaml  flexolink_ring_defconfig
icm20948/: icm20948.c  icm20948.h
icm20948/zephyr/: CMakeLists.txt  Kconfig  icm20948.c
src/: main.c
